syntax = "proto3";

package hello;

option go_package = "/mnt/c/Project/go/grpc-demo;hello";

service hi {
  rpc sayHello (HiUser) returns (HiReply) {}
}

message HiUser {
  string name = 1;
  int32 sex = 2;
}

message HiReply {
  string message = 1;
  HiUser user = 2;
}
